@@ -1113,6 +1113,19 @@ class EditPage {
 		$templates = ($this->preview || $this->section) ? $this->mPreviewTemplates : $this->mArticle->getUsedTemplates();
 		$formattedtemplates = $sk->formatTemplates( $templates, $this->preview, $this->section != '');
 
+
+		global $wgAjaxShowEditors ;
+		if ( $wgAjaxShowEditors && isset( $this->mArticle )
+                 && isset( $this->mArticle->mRevision ) ) {
+			global $wgJsMimeType, $wgStylePath, $wgStyleVersion;
+			$wgOut->addScript( "<script type=\"{$wgJsMimeType}\" src=\"{$wgStylePath}/common/ajaxshoweditors.js?$wgStyleVersion\"></script>\n" );
+			$wgOut->addWikiText(
+				'<div id="ajax-se"><p id="ajax-se-title">'.wfMsg('ajax-se-title').'</p>'
+				. '<p id="ajax-se-editors">'. wfMsg('ajax-se-pending') . '</p>'
+				. '</div>'
+				);
+		}
+
 		global $wgUseMetadataEdit ;
 		if ( $wgUseMetadataEdit ) {
 			$metadata = $this->mMetaData ;
